--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -1118,6 +1118,8 @@
   }
  ],
  "metadata": {
+  "title": "Bell's inequality with Qiskit",
+  "description": "Learn what measurement statistics are predicted by hidden variables and by quantum mechanics, and check which is correct using a real quantum computer.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
