--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -1276,6 +1276,8 @@
   }
  ],
  "metadata": {
+  "title": "Stern-Gerlach measurements with Qiskit",
+  "description": "Review the historical Sterg-Gerlack experiment and make analogous measurements using a real quantum computer.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
