--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -174,7 +174,7 @@ Wondering what has changed? Read the [changelog](https://github.com/Qiskit/qiski
         # initialize account
         service = QiskitRuntimeService() # defaults to ibm_quantum_platform account
         service.backend(name="...") # only checks saved default instance from save_account
-        service.backend(name="...", instance="...") # can also explicity pass in an instance which takes precendence
+        service.backend(name="...", instance="...") # can also explicity pass in an instance which takes precedence
 
         # initializing account with instance works the same way
         service = QiskitRuntimeService(instance = "...") # sets instance as default instance, overrides instance from save_account
