--- a/docs/guides/Dag-Tutorial.mdx
+++ b/docs/guides/Dag-Tutorial.mdx
@@ -7,7 +7,7 @@ description: How to use Directed Acyclic Graphs (DAGs) to analyze and transform 
 
 In Qiskit, circuits are represented internally using a Directed Acyclic Graph (DAG). The advantage of this representation over a pure list of gates (that is, netlist) is that the flow of information between operations is explicit, making it easier for passes to make transformation decisions without changing the semantics of the circuit.
 
-This guide demonstrates how to work with DAGs and use them to write custom transpiler passes. You'll start by building a simple circuit and examining its DAG representation, then explore basic DAG operations and implement a custom BasicMapper pass.
+This guide demonstrates how to work with DAGs and use them to write custom transpiler passes. It will start with building a simple circuit and examining its DAG representation, then explores basic DAG operations and implements a custom `BasicMapper` pass.
 
 ## Build a circuit and examine its DAG
 
